# `federation` — the native (Tier-2) datasources extension (datasources scope). A supervised host
# binary that embeds DataFusion + its table providers as a LIBRARY and fronts external SQL sources
# (Postgres/Timescale, …) behind one read-first `federation.query` verb. Like `echo-sidecar` it is a
# native binary for the host target, so it IS a workspace member (it builds for the host), and it
# speaks the SAME `lb-supervisor` wire protocol over stdio.
#
# Heavy DB deps (datafusion, datafusion-table-providers, sqlparser) live ONLY here — core crates
# link no DB driver (datasources scope: the engine + sockets belong in a supervised, admin-approved,
# net:*-gated process, never the symmetric node binary).
[package]
name = "federation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "federation"
path = "src/main.rs"

[dependencies]
# Reuse the supervisor's wire protocol + framing verbatim — the child and host agree on the ABI by
# sharing the crate (no drift), exactly like echo-sidecar.
lb-supervisor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
# Hashing only: the warm-pool cache keys on a SHA-256 of the DSN (never the DSN itself), and query
# events carry a SQL digest rather than the SQL text (federation-pool-cache scope). NOT
# `lb-telemetry::params_digest`, which is the same discipline but drags `lb-store` (SurrealDB) +
# `lb-bus` (Zenoh) into a supervised sidecar that must link neither.
sha2 = { workspace = true }

# The embedded query engine (datasources scope: embed the crate, never the Spice/Cube product). The
# `Source` trait fronts it; each source owns a pool behind that trait. Pinned to the major
# `datafusion-table-providers` is built against (datafusion ^53). The SELECT-only validator uses
# `datafusion::sql::sqlparser` (re-export) so there is one sqlparser version, never a mismatch.
#
# Default = sqlite only (the test fallback engine, real rows on disk). The `postgres` feature adds
# the Postgres/Timescale connector — it pulls native-tls → openssl-sys, which needs a system OpenSSL
# (or the `openssl/vendored` build deps) to compile, so it is opt-in and built where TLS is
# available. The HEADLINE source is Postgres; sqlite is the documented fallback (testing §0).
datafusion = "53"
# `datafusion-table-providers` 0.11 ships per-engine federation features (`sqlite-federation`,
# `postgres-federation`) that wrap each `TableProvider` in a `datafusion-federation` adaptor.
# With the federation optimizer rule installed in the per-query `SessionState` (see `query.rs`),
# DataFusion detects that every table in a plan belongs to one source, unparses the plan back to
# that engine's SQL dialect, and executes it remotely — only the small result batches cross back
# (federation-pushdown scope). `sqlite-federation` is on by default (sqlite is the default engine,
# never feature-gated); `postgres-federation` rides the existing `postgres` feature.
datafusion-table-providers = { version = "0.11", default-features = false, features = ["sqlite-bundled", "sqlite-federation"] }
# The federation session-state wiring (analyzer rule + query planner). Pinned EXACTLY to =0.5.3
# (the version `datafusion-table-providers` 0.11 was built against) — newer 0.5.x releases rebind
# to datafusion 54 and drag a second `datafusion-catalog` into the graph, breaking the build (risk:
# version lock — exact pin, not a caret, on purpose).
datafusion-federation = "=0.5.3"
# The pool's params type (`HashMap<String, SecretString>`) — same major as table-providers, so the
# DSN never lands in a plain `String` field the engine logs (secret mediation, datasources scope).
secrecy = "0.10"
# Arrow → JSON row conversion for the `{columns, rows}` result (same major as datafusion 53's arrow).
arrow = "58"
arrow-json = "58"
# Only pulled in when the `postgres` feature is on (its connector needs native-tls → openssl). Build
# OpenSSL from source so no system OpenSSL/pkg-config is required (datasources scope: heavy/native
# deps live ONLY in this extension). Optional → off by default (sqlite path links no TLS).
openssl = { version = "0.10", features = ["vendored"], optional = true }
# The wire driver behind `PostgresConnectionPool` — named directly ONLY for `apply_ddl`/`write_rows`,
# which the read-only DataFusion provider path cannot express (they need a live `execute` + a
# transaction). Pinned to the same 0.7 the pool already links (one `tokio-postgres` in the graph).
# Gated on `postgres`; the sqlite path never pulls it.
tokio-postgres = { version = "0.7", optional = true, features = ["with-serde_json-1"] }

# Direct catalog reads the DataFusion provider path cannot express (`PRAGMA foreign_key_list` for
# `federation.sample`'s relationships). Same version/features as the host's dev-dep so the one
# `libsqlite3-sys` (links = sqlite3) in the workspace graph stays unified with the bundled engine
# `datafusion-table-providers/sqlite-bundled` already links.
rusqlite = { version = "0.37", features = ["bundled"] }

# Own tokio: the child reads/writes its OWN stdio (io-std) + runs the async engine (rt-multi-thread).
# `sync` for the pool cache's per-key `OnceCell` (one connect per key, awaited outside the map
# lock); `time` for the query timeout — both federation-pool-cache scope.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "io-std", "sync", "time"] }

[features]
default = []
# Enable the Postgres/Timescale source. Requires a TLS toolchain (system OpenSSL or the
# `openssl/vendored` build deps: a C compiler + ranlib). Build with `--features postgres`.
# `postgres-federation` rides along — the `PostgresTableFactory::table_provider` wraps in a
# `FederatedTableProviderAdaptor` automatically when the feature is on (no source-code change).
postgres = ["datafusion-table-providers/postgres", "datafusion-table-providers/postgres-federation", "dep:openssl", "dep:tokio-postgres"]
