[package]
name = "lb-host"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lb-apikey.workspace = true
lb-assets.workspace = true
lb-auth.workspace = true
lb-authz.workspace = true
lb-caps.workspace = true
lb-devkit.workspace = true
lb-store.workspace = true
lb-bus.workspace = true
lb-runtime.workspace = true
lb-ext-loader.workspace = true
lb-inbox.workspace = true
lb-ingest.workspace = true
lb-jobs.workspace = true
lb-prefs.workspace = true
lb-run-events.workspace = true
lb-tags.workspace = true
lb-telemetry.workspace = true
lb-undo.workspace = true
lb-viz.workspace = true
lb-mcp.workspace = true
lb-outbox.workspace = true
lb-prql.workspace = true
lb-registry.workspace = true
lb-reminders.workspace = true
lb-rules.workspace = true
lb-flows.workspace = true
lb-secrets.workspace = true
lb-supervisor.workspace = true
rhai = { version = "1.20", features = ["sync", "serde"] }
# The read-only SQL surface (`store.query`, widget-builder Slice A) parses the statement with
# SurrealDB's own parser to allowlist a single SELECT by KIND (never a substring check). We use only
# the parser (`surrealdb::syn::parse` + `surrealdb::sql::Statement`); the store engine stays behind
# `lb-store`. Same pinned version + feature set as the workspace store crate (symmetric build).
surrealdb.workspace = true
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
iana-time-zone.workspace = true
if-addrs.workspace = true
hostname.workspace = true
tokio.workspace = true
tracing.workspace = true
base64ct = { version = "1", features = ["alloc"] }
# HMAC-SHA256 verification for `signature`-mode webhooks (webhooks scope) — over the raw request
# body, constant-time compared. Pairs with `sha2`; same pinned versions as the workspace `apikey`
# and `github-webhook` crates (the vetted discipline).
hmac.workspace = true
sha2.workspace = true
# The per-workspace model memoization cache on the `Node` (active-agent-wiring scope, Slice 2). State
# on the node spine — not a role concern, so it lives here in core host.
dashmap.workspace = true
# The `signature`-mode shared-secret generator (webhooks scope) — reuses `lb_apikey::generate_secret`
# for the entropy; `rand` is only for the (currently-unused) `random_bytes` helper kept for parity.
rand.workspace = true

[dev-dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# The registry tests sign artifacts with a deterministic publisher key (the same `ed25519-dalek`
# stack `lb_registry::verify_artifact` checks against). Test-only — the host never build-depends on
# it directly (verification lives in `lb-registry`).
ed25519-dalek.workspace = true
# The AI-gateway role crate supplies the model-access bridge + the deterministic mock provider for
# the agent tests. It is a DEV dependency only: the host depends on the `ModelAccess` trait it owns,
# never on a role crate at build time (roles depend on host, not the reverse — symmetric layering).
lb-role-ai-gateway.workspace = true
# The gateway role crate supplies `dev_claims` — the REAL dev-login cap set (member + admin) — so the
# persona-catalog test's "admin caller" holds exactly what a live admin holds (incl. the destructive
# verbs the built-in personas must exclude even from an admin). DEV-only; a dev-dependency cycle
# (gateway → host normally, host → gateway for tests) is permitted by Cargo and keeps the test's cap
# source honest instead of a hand-copied list that drifts. The host never build-depends on it.
lb-role-gateway.workspace = true
